@@ -13,6 +13,9 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   the profile.
 * Increase timeout of NetworkManager-wait-online.service to 60 seconds.
 * Add "ipv4.dhcp-client-id=ipv6-duid" option for RFC4361.
+* The dhcpcd plugin now requires a minimum version of dhcpcd-9.3.3 with
+  the --noconfigure option. Using an older version will cause dhcpcd to
+  exit with a status code of 1.
 
 =============================================
 NetworkManager-1.28
